--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -13,9 +13,9 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: docker/setup-buildx-action@v1
-      - uses: docker/login-action@v1
+      - uses: docker/login-action@v2
         with:
-          registry: ghcr.io
+          registry: ${{ vars.IMAGE_REGISTRY }}
           username: ${{ secrets.GREENBONE_BOT }}
           password: ${{ secrets.GREENBONE_BOT_PACKAGES_WRITE_TOKEN }}
       - run: make push
